# controller/service/service.go
@@ -27,7 +27,131 @@ func Register(group gin.IRoutes) {
 	group.GET("/:serviceId", service.ServiceDetail)
 	group.POST("/http", service.ServiceCreateHttp)
 	group.PATCH("/http/:serviceId", service.ServiceHttpUpdate)
+	
+	group.POST("/tcp", service.ServiceCreateTcp)
+	group.PATCH("/tcp/:serviceId", service.ServiceUpdateTcp)
+
+	group.POST("/grpc", service.ServiceCreateGrpc)
+	group.PATCH("/grpc/:serviceId", service.ServiceUpdateGrpc)
 }
+
+
+// ServiceCreate godoc
+// @Summary 创建 tcp 服务
+// @Description 创建 tcp 服务
+// @Tags Service
+// @ID /service/tcp
+// @Accept  json
+// @Produce  json
+// @security ApiKeyAuth
+// @Param info body serviceDto.ServiceAddTcpInput true "body"
+// @Success 200 {object} public.Response{data=string} "success"
+// @Router /service/tcp [post]
+func (s *ServiceController) ServiceCreateTcp(c *gin.Context) {
+	params := serviceDto.ServiceAddTcpInput{}
+	if err := params.BindValidParam(c); err != nil {
+		public.ResponseError(c, public.ResponseCode(2001), err)
+		return
+	}
+
+	if len(strings.Split(params.IpList, ",")) != len(strings.Split(params.WeightList, ",")) {
+		public.ResponseError(c, 2004, errors.New("IP列表与权重列表数量不一致"))
+		return
+	}
+
+	tx, err := libMysql.GetGormPool("default")
+	
+	if err != nil {
+		public.ResponseError(c, 2005, err)
+	}
+	serviceInfo := &model.Service{ServiceName: params.ServiceName}
+	if _, err := serviceInfo.Find(c, tx, serviceInfo); err == nil {
+		tx.Rollback()
+		public.ResponseError(c, public.ResponseCode(2006), errors.New("服务已经存在"))
+		return
+	}
+
+	tcpRuleSearch := &model.TcpRule{
+		Port: params.Port,
+	}
+	if _, err := tcpRuleSearch.FindMust(c, tx, tcpRuleSearch); err == nil {
+		public.ResponseError(c, 2003, errors.New("服务端口被占用，请重新输入"))
+		return
+	}
+
+
+	grpcRuleSearch := &model.GrpcRule{
+		Port: params.Port,
+	}
+
+	if _, err := grpcRuleSearch.FindMust(c, tx, grpcRuleSearch); err == nil {
+		public.ResponseError(c, 2003, errors.New("服务端口被占用，请重新输入"))
+		return
+	}
+
+	tx = tx.Begin()
+
+	info := &model.Service{
+		LoadType: libConst.LoadTypeTCP,
+		ServiceName: params.ServiceName,
+		ServiceDesc: params.ServiceDesc,
+	}
+
+	if err := info.Save(c, tx); err != nil {
+		tx.Rollback()
+		public.ResponseError(c, 2006, err)
+		return
+	}
+
+	loadBalance := &model.LoadBalance{
+		ServiceInfoID:  info.ID,
+		RoundType:  params.RoundType,
+		IpList:     params.IpList,
+		WeightList: params.WeightList,
+		ForbidList: params.ForbidList,
+	}
+
+	if err := loadBalance.Save(c, tx); err != nil {
+		tx.Rollback()
+		public.ResponseError(c, 2007, err)
+		return
+	}
+
+	tcpRule := &model.TcpRule{
+		ServiceInfoID: info.ID,
+		Port:      params.Port,
+	}
+	if err := tcpRule.Save(c, tx); err != nil {
+		tx.Rollback()
+		public.ResponseError(c, 2008, err)
+		return
+	}
+
+	accessControl := &model.AccessControl{
+		ServiceInfoID:         info.ID,
+		OpenAuth:          params.OpenAuth,
+		BlackList:         params.BlackList,
+		WhiteList:         params.WhiteList,
+		WhiteHostName:     params.WhiteHostName,
+		ClientIPFlowLimit: params.ClientIPFlowLimit,
+		ServiceFlowLimit:  params.ServiceFlowLimit,
+	}
+
+	if err := accessControl.Save(c, tx); err != nil {
+		tx.Rollback()
+		public.ResponseError(c, 2009, err)
+		return
+	}
+	tx.Commit()
+	public.ResponseSuccess(c, "创建成功")
+}
+
+
+func (s *ServiceController) ServiceUpdateTcp(c *gin.Context) {}
+
+
+func (s *ServiceController) ServiceCreateGrpc(c *gin.Context) {}
+func (s *ServiceController) ServiceUpdateGrpc(c *gin.Context) {}
 
 // ServiceHttpUpdate godoc
 // @Summary 更新 http 服务
@@ -142,26 +266,6 @@ func (s *ServiceController) ServiceHttpUpdate(c *gin.Context) {
 
 	tx.Commit()
 	public.ResponseSuccess(c, "更新成功")
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
-
-
-
-
-
-
 }
  
 // ServiceCreate godoc
